2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/find-dialog.glade:
	* data/glade/replace-dialog.glade:
	  Removed selected rows targets.

	* lib/gaupol/base/delegate/find.py:
	* lib/gaupol/base/delegate/format.py:
	* lib/gaupol/base/text/finder.py:
	* lib/gaupol/base/text/test/test_finder.py:
	* lib/gaupol/gtk/delegate/find.py:
	* lib/gaupol/gtk/dialog/find.py:
	* lib/gaupol/gtk/dialog/test/test_find.py:
	  Fixed bugs.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/posadjust-dialog.glade:
	  Changed current entry sensitivities back to true.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/action.py:
	* lib/gaupol/gtk/delegate/appupdate.py:
	* lib/gaupol/gtk/delegate/edit.py:
	* lib/gaupol/gtk/delegate/viewupdate.py:
	  Removed all page.view.grab_focus() calls.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegate/action.py:
	* lib/gaupol/base/delegate/edit.py:
	* lib/gaupol/gtk/delegate/action.py:
	* lib/gaupol/gtk/delegate/edit.py:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/delegate/filesave.py:
	* lib/gaupol/gtk/delegate/find.py:
	* lib/gaupol/gtk/delegate/format.py:
	* lib/gaupol/gtk/delegate/guiinit.py:
	* lib/gaupol/gtk/delegate/position.py:
	* lib/gaupol/gtk/delegate/spellcheck.py:
	* lib/gaupol/gtk/delegate/test/test_find.py:
	* lib/gaupol/gtk/dialog/debug.py:
	* lib/gaupol/gtk/dialog/find.py:
	* lib/gaupol/gtk/dialog/spellcheck.py:
	  Fixed bugs.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	* lib/gaupol/base/delegate/action.py:
	* lib/gaupol/base/delegate/edit.py:
	* lib/gaupol/base/delegate/fileopen.py:
	* lib/gaupol/base/delegate/filesave.py:
	* lib/gaupol/base/delegate/find.py:
	* lib/gaupol/base/delegate/format.py:
	* lib/gaupol/base/delegate/position.py:
	* lib/gaupol/base/delegate/preview.py:
	* lib/gaupol/base/delegate/test/test_action.py:
	* lib/gaupol/base/delegate/test/test_edit.py:
	* lib/gaupol/base/delegate/test/test_filesave.py: